@@ -9,6 +9,7 @@
 - fixed handling of unexpected problems in the Flow with the main process becoming disconnected
 - fixed `uptime` value in the framework stats
 - improved auditlogs by adding `files`
+- fixed unexpected errors when compressing/decompressing data via WebSocket
 
 ========================
 0.0.15
